WIP: dynamic plot update
